# stufbsys

./: .gitignore  .gitmodules  README.md  stufbsys_db.sql
docs/: 一键部署详细操作说明.md  源码编译.md
front/admin/: .env.production  index.html  package.json  pnpm-lock.yaml  vite.config.ts
front/admin/public/: platform-config.json
front/admin/src/api/: canteen.ts  notices.ts  platform.ts  routes.ts  suggestions.ts  teacher.ts  user.ts  welcome.ts
front/admin/src/layout/components/lay-setting/: index.vue
front/admin/src/views/canteen/add/: index.vue
front/admin/src/views/canteen/add/utils/: hook.tsx
front/admin/src/views/canteen/evaluate/: detail.vue  index.vue
front/admin/src/views/canteen/evaluate/utils/: evaluateHook.tsx  hook.tsx
front/admin/src/views/canteen/list/: index.vue
front/admin/src/views/login/: index.vue
front/admin/src/views/login/components/: forgotPassword.vue
front/admin/src/views/login/utils/: rule.ts
front/admin/src/views/notices/list/: index.vue
front/admin/src/views/platform/exam/: index.vue
front/admin/src/views/platform/settings/: index.vue
front/admin/src/views/suggestions/long/: content.vue  index.vue
front/admin/src/views/suggestions/short/: content.vue  index.vue
front/admin/src/views/teachers/list/: index.vue
front/admin/src/views/welcome/: data.ts  index.vue
front/reception/: README.md  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
front/reception/src/: App.vue  main.ts
front/reception/src/api/: canteen.ts  notices.ts  schSuggestion.ts  settings.ts  tchSuggestion.ts
front/reception/src/components/: bottom-btn.vue  dialog.vue  function-btn.vue  item-card.vue  loading.vue  page-title.vue  painting.vue  scroll-top.vue  search-input.vue
front/reception/src/hooks/: useDishAdd.ts  useDishEvaluate.ts  useDishs.ts  useExam.ts  useSchSuggestionLong.ts  useSchSuggestionShort.ts  useSettings.ts  useTchSuggestion.ts  useTeacher.ts  useVerify.ts
front/reception/src/router/: index.ts
front/reception/src/stores/: user.ts
front/reception/src/utils/: http.ts
front/reception/src/views/canteen/: add-dish.vue  evaluate-list.vue  index.vue
front/reception/src/views/canteen/components/: add-dish-detail.vue  add-dish-vote.vue  evaluate-detail.vue  evaluate.vue
front/reception/src/views/for-school/: index.vue  long-list.vue  short-list.vue
front/reception/src/views/for-school/components/: add-suggestion.vue  suggestion-detail.vue
front/reception/src/views/for-teacher/: index.vue  list.vue
front/reception/src/views/for-teacher/components/: add-suggestion.vue  suggestion-detail.vue
front/reception/src/views/home/: index.vue
front/reception/src/views/home/components/: exam.vue  notices-detail.vue  notices.vue  title.vue  verification.vue
front/teacherAdmin/: .env.production  index.html  package.json  pnpm-lock.yaml
front/teacherAdmin/public/: platform-config.json
front/teacherAdmin/src/api/: platform.ts  routes.ts  suggestions.ts  user.ts  welcome.ts
front/teacherAdmin/src/layout/components/lay-footer/: index.vue
front/teacherAdmin/src/layout/components/lay-navbar/: index.vue
front/teacherAdmin/src/layout/components/lay-setting/: index.vue
front/teacherAdmin/src/store/: types.ts
front/teacherAdmin/src/views/login/: index.vue
front/teacherAdmin/src/views/login/components/: SelectAccountDialog.vue
front/teacherAdmin/src/views/login/utils/: rule.ts
front/teacherAdmin/src/views/platform/account/: index.vue
front/teacherAdmin/src/views/suggestions/: content.vue  index.vue
front/teacherAdmin/src/views/suggestions/utils/: hook.tsx
front/teacherAdmin/src/views/welcome/: data.ts  index.vue
server/: CMakeLists.txt  config.json  main.cc
server/controllers/: AdminCanteen.cc  AdminCanteen.h  AdminLogin.cc  AdminLogin.h  AdminNotice.cc  AdminNotice.h  AdminPlatform.cc  AdminPlatform.h  AdminSuggestion.cc  AdminSuggestion.h  AdminTeacher.cc  AdminTeacher.h  AdminWelcome.cc  AdminWelcome.h  TeacherLogin.cc  TeacherLogin.h  TeacherSettings.cc  TeacherSettings.h  TeacherSuggestionCtrl.cc  TeacherSuggestionCtrl.h  TeacherWelcome.cc  TeacherWelcome.h  UserCanteen.cc  UserCanteen.h  UserEntrance.cc  UserEntrance.h  UserSuggestion.cc  UserSuggestion.h  UserTchSuggestion.cc  UserTchSuggestion.h
server/filters/: AdminLoginFilter.cc  AdminLoginFilter.h  TeacherLoginFilter.cc  TeacherLoginFilter.h  UserLoginFilter.cc  UserLoginFilter.h
server/models/: AdminAccount.cc  AdminAccount.h  DataStatistics.cc  DataStatistics.h  Dish.cc  Dish.h  DishAdd.cc  DishAdd.h  DishEvaluate.cc  DishEvaluate.h  EntranceExam.cc  EntranceExam.h  Notice.cc  Notice.h  PlatformSettings.cc  PlatformSettings.h  SchoolSuggestionLong.cc  SchoolSuggestionLong.h  SchoolSuggestionShort.cc  SchoolSuggestionShort.h  Teacher.cc  Teacher.h  TeacherDataStatistics.cc  TeacherDataStatistics.h  TeacherSuggestion.cc  TeacherSuggestion.h  User.cc  User.h  VoteRecord.cc  VoteRecord.h  model.json
server/plugins/: Jwt.cc  Jwt.h
server/utils/: EverydayTasks.cc  EverydayTasks.h  utils.cc  utils.h  verifyImageComparator.cc  verifyImageComparator.h
tools/configtool/: .gitignore  CMakeLists.txt  configtool.cpp  configtool.h  configtool.ui  databasesetpassword.cpp  databasesetpassword.h  icon.rc  main.cpp  manifest.xml  res.qrc  servicecontroller.cpp  servicecontroller.h  sslcertautoreq.cpp  sslcertautoreq.h
tools/installer/windows/: .gitignore  CMakeLists.txt  installer.cpp  installer.h  installer.ui  main.cpp  res.qrc  servicecontroller.cpp
tools/installer/windows/package/: README.txt
tools/installer/windows/package/nginx/conf/: nginx.conf
tools/installer/windows/package/nginx/conf/ssl/: ssl_server_template.conf
(+29 files in other folders)
